# PalworldSaveTools

./: .gitignore  README.en.md  build.cmd  menu.cmd  menu.py  pyproject.toml  readme.md
Assets/: all_in_one_deletion.py  character_transfer.py  convertids.py  fix_host_save.py  game_pass_save_fix.py  itemdata.json  modify_save.py  restore_map.py  slot_injector.py
Assets/i18n/: __init__.py  config.json  en_US.json  zh_CN.json
ppe_windows/: config.json
psp_windows/: psp.db
psp_windows/lib/: ooz.pyd
psp_windows/ui/: about.html
psp_windows/ui/_app/: env.js  version.json
psp_windows/ui/_app/immutable/assets/: 0.DI-j-rLP.css  11.cptEaBYh.css  3.Doxw3zP2.css  4.B9JB0yk8.css  5.bIsRuKpR.css  9.Iiwex5TE.css  Nuke.Bpu5rBuP.css  Toast.DcV6_m28.css
psp_windows/ui/_app/immutable/chunks/: B7z-6CDi.js  B9aKyTE9.js  B9l1RHVT.js  B9qQQCBg.js  BKVzOIvg.js  BVdvzYUS.js  BxtrYP92.js  CF87TII9.js  CHBWxhb-.js  CYFWRQLF.js  DORw01e3.js  DPqr1Em3.js  Dr9RPzdF.js  FTlQNedl.js  IMVsPcR8.js  aaggoT9b.js  nvkXWzLC.js  woX702LQ.js
psp_windows/ui/_app/immutable/entry/: app.DMLAPCMu.js  start.DLFRK4ZZ.js
psp_windows/ui/_app/immutable/nodes/: 0.CzPYxlIx.js  1.BzlhgrMV.js  10.B5qv-M0n.js  11.D0nW3qVf.js  12.Ca7e9IWx.js  2.BLKqgTWy.js  3.Cz3gojmM.js  4.DWL7x8-Y.js  5.BrNwpxBS.js  6.BPrlMGp5.js  7.4AG6_t9Z.js  8.CBa4PgQ2.js  9.CZcfT-rf.js
